Raise right margin on buttons to avoid glow overlap

--- a/style.css
+++ b/style.css
@@ -74,12 +74,12 @@ body {
 }
 
 .fist {
-  margin-right: 20px;
+  margin-right: 70px;
   border-radius: 10%;
 }
 
 .sheet {
-  margin-right: 20px;
+  margin-right: 70px;
   border-radius: 10%;
 }
 
